--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+
+
+
+div#ul{
+    top: 0;
+        width: 200px;
+        z-index: 2;
+        transition: right 1s;
+        transition-duration: 2s;
+}
