--- a/public/output.css
+++ b/public/output.css
@@ -587,6 +587,14 @@ video {
   display: none;
 }
 
+.h-\[12rem\] {
+  height: 12rem;
+}
+
+.h-\[192px\] {
+  height: 192px;
+}
+
 .h-full {
   height: 100%;
 }
@@ -599,22 +607,16 @@ video {
   width: 400px;
 }
 
-.w-fit {
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-}
-
 .w-full {
   width: 100%;
 }
 
-.max-w-\[200px\] {
-  max-width: 200px;
-}
-
 .max-w-\[400px\] {
   max-width: 400px;
+}
+
+.list-disc {
+  list-style-type: disc;
 }
 
 .grid-cols-2 {
@@ -641,10 +643,6 @@ video {
   gap: 1.5rem;
 }
 
-.gap-4 {
-  gap: 1rem;
-}
-
 .space-y-8 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
@@ -659,6 +657,11 @@ video {
   border-radius: 9999px;
 }
 
+.rounded-e-lg {
+  border-start-end-radius: 0.5rem;
+  border-end-end-radius: 0.5rem;
+}
+
 .border {
   border-width: 1px;
 }
@@ -667,8 +670,9 @@ video {
   border-bottom-width: 1px;
 }
 
-.border-t {
-  border-top-width: 1px;
+.border-\[\#14381f\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(20 56 31 / var(--tw-border-opacity));
 }
 
 .border-\[\#222222\] {
@@ -681,9 +685,9 @@ video {
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
-.bg-\[\#222222\] {
+.bg-\[\#14381f\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(34 34 34 / var(--tw-bg-opacity));
+  background-color: rgb(20 56 31 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#f2f2f2\] {
@@ -691,18 +695,9 @@ video {
   background-color: rgb(242 242 242 / var(--tw-bg-opacity));
 }
 
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-\[\] {
-  background-color: ;
 }
 
 .px-3 {
@@ -735,9 +730,8 @@ video {
   padding-bottom: 1rem;
 }
 
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
+.pb-2 {
+  padding-bottom: 0.5rem;
 }
 
 .pb-28 {
@@ -752,6 +746,10 @@ video {
   padding-left: 2.5rem;
 }
 
+.pl-4 {
+  padding-left: 1rem;
+}
+
 .pr-3 {
   padding-right: 0.75rem;
 }
@@ -762,6 +760,10 @@ video {
 
 .pt-10 {
   padding-top: 2.5rem;
+}
+
+.pt-5 {
+  padding-top: 1.25rem;
 }
 
 .pt-6 {
@@ -802,35 +804,14 @@ video {
   font-weight: 600;
 }
 
-.text-\[\#8A6201\] {
+.text-\[\#14381f\] {
   --tw-text-opacity: 1;
-  color: rgb(138 98 1 / var(--tw-text-opacity));
-}
-
-.text-black {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
+  color: rgb(20 56 31 / var(--tw-text-opacity));
 }
 
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.opacity-90 {
-  opacity: 0.9;
-}
-
-.shadow-lg {
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-xl {
-  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .shadow-2xl {
@@ -862,9 +843,29 @@ input[type="search"]::-webkit-search-cancel-button {
   cursor: pointer;
 }
 
+@media screen and (min-width:640px) {
+  .item{
+    display: grid;
+    grid-template-columns: repeat(2 ,1fr);
+    gap: 6px;
+  }
+}
+
+@media screen and (min-width:430px){
+  .item {
+    display: grid;
+    gap: 10px;
+  }
+}
+
 .placeholder\:text-xl::placeholder {
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.placeholder\:text-\[\#14381f\]::placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(20 56 31 / var(--tw-text-opacity));
 }
 
 .placeholder\:text-black::placeholder {
@@ -891,16 +892,8 @@ input[type="search"]::-webkit-search-cancel-button {
 }
 
 @media (min-width: 768px) {
-  .md\:max-w-\[\] {
-    max-width: ;
-  }
-
-  .md\:max-w-\[250px\] {
-    max-width: 250px;
-  }
-
-  .md\:grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
+  .md\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .md\:gap-4 {
@@ -917,20 +910,12 @@ input[type="search"]::-webkit-search-cancel-button {
     display: none;
   }
 
-  .lg\:max-w-\[\] {
-    max-width: ;
-  }
-
-  .lg\:max-w-\[400px\] {
-    max-width: 400px;
-  }
-
-  .lg\:max-w-\[300px\] {
-    max-width: 300px;
-  }
-
   .lg\:max-w-\[1200px\] {
     max-width: 1200px;
+  }
+
+  .lg\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .lg\:gap-6 {
