--- a/src/input.css
+++ b/src/input.css
@@ -20,3 +20,18 @@ input[type="search"]::-webkit-search-cancel-button {
 color: black !important;
 cursor: pointer;
 }
+
+@media screen and (min-width:640px) {
+    .item{
+        display: grid;
+        grid-template-columns: repeat(2 ,1fr);
+        gap: 6px;
+    }
+}
+
+@media screen and (min-width:430px){
+.item {
+        display: grid;
+        gap: 10px;
+    }
+}
