--- a/public/output.css
+++ b/public/output.css
@@ -625,62 +625,12 @@ video {
   max-width: 400px;
 }
 
-.max-w-\[\] {
-  max-width: ;
-}
-
-.max-w-\[300ps\] {
-  max-width: 300ps;
-}
-
-.max-w-\[300px\] {
-  max-width: 300px;
-}
-
-.max-w-fit {
-  max-width: -webkit-fit-content;
-  max-width: -moz-fit-content;
-  max-width: fit-content;
-}
-
-.max-w-\[4\] {
-  max-width: 4;
-}
-
 .flex-auto {
   flex: 1 1 auto;
 }
 
-.basis-10 {
-  flex-basis: 2.5rem;
-}
-
-.basis-1 {
-  flex-basis: 0.25rem;
-}
-
-.basis-\[\] {
-  flex-basis: ;
-}
-
-.basis-\[40\] {
-  flex-basis: 40;
-}
-
-.basis-\[40\%\] {
-  flex-basis: 40%;
-}
-
-.basis-\[0\%\] {
-  flex-basis: 0%;
-}
-
 .basis-\[20\%\] {
   flex-basis: 20%;
-}
-
-.basis-\[70\] {
-  flex-basis: 70;
 }
 
 .basis-\[70\%\] {
@@ -697,6 +647,10 @@ video {
 
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
 .flex-col-reverse {
@@ -731,16 +685,16 @@ video {
   gap: 0.75rem;
 }
 
-.gap-6 {
-  gap: 1.5rem;
-}
-
 .gap-4 {
   gap: 1rem;
 }
 
-.gap-x-2 {
-  column-gap: 0.5rem;
+.gap-6 {
+  gap: 1.5rem;
+}
+
+.gap-5 {
+  gap: 1.25rem;
 }
 
 .gap-y-4 {
@@ -783,14 +737,14 @@ video {
   border-color: rgb(20 56 31 / var(--tw-border-opacity));
 }
 
-.border-\[\#222222\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(34 34 34 / var(--tw-border-opacity));
-}
-
 .border-black {
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
+.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
 .bg-\[\#14381f\] {
@@ -811,6 +765,11 @@ video {
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .px-6 {
@@ -843,14 +802,9 @@ video {
   padding-bottom: 1rem;
 }
 
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .pb-2 {
@@ -881,6 +835,10 @@ video {
   padding-top: 2.5rem;
 }
 
+.pt-2 {
+  padding-top: 0.5rem;
+}
+
 .pt-5 {
   padding-top: 1.25rem;
 }
@@ -897,8 +855,20 @@ video {
   padding-top: 7.3rem;
 }
 
-.pt-2 {
-  padding-top: 0.5rem;
+.pt-8 {
+  padding-top: 2rem;
+}
+
+.pb-8 {
+  padding-bottom: 2rem;
+}
+
+.pt-16 {
+  padding-top: 4rem;
+}
+
+.pt-20 {
+  padding-top: 5rem;
 }
 
 .text-center {
@@ -918,6 +888,10 @@ video {
   font-size: .9rem;
 }
 
+.text-\[0\.5rem\] {
+  font-size: 0.5rem;
+}
+
 .text-\[0\.8rem\] {
   font-size: 0.8rem;
 }
@@ -926,14 +900,23 @@ video {
   font-size: 1.1rem;
 }
 
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
 
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
+.text-\[0\.9rem\] {
+  font-size: 0.9rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .font-light {
@@ -953,14 +936,14 @@ video {
   color: rgb(20 56 31 / var(--tw-text-opacity));
 }
 
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
 .text-gray-500 {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .shadow-2xl {
@@ -1044,51 +1027,17 @@ input[type="search"]::-webkit-search-cancel-button {
   transition-duration: 150ms;
 }
 
-@media (min-width: 640px) {
-  .sm\:w-1\/3 {
-    width: 33.333333%;
-  }
-}
-
 @media (min-width: 768px) {
   .md\:grid {
     display: grid;
-  }
-
-  .md\:w-1\/3 {
-    width: 33.333333%;
-  }
-
-  .md\:w-1\/4 {
-    width: 25%;
-  }
-
-  .md\:w-1 {
-    width: 0.25rem;
-  }
-
-  .md\:w-1\/2 {
-    width: 50%;
   }
 
   .md\:w-full {
     width: 100%;
   }
 
-  .md\:max-w-\[\] {
-    max-width: ;
-  }
-
   .md\:max-w-\[700px\] {
     max-width: 700px;
-  }
-
-  .md\:max-w-\[1000px\] {
-    max-width: 1000px;
-  }
-
-  .md\:max-w-\[800px\] {
-    max-width: 800px;
   }
 
   .md\:grid-cols-2 {
@@ -1125,28 +1074,12 @@ input[type="search"]::-webkit-search-cancel-button {
     display: none;
   }
 
-  .lg\:w-1\/3 {
-    width: 33.333333%;
+  .lg\:max-w-\[1000px\] {
+    max-width: 1000px;
   }
 
   .lg\:max-w-\[1200px\] {
     max-width: 1200px;
-  }
-
-  .lg\:max-w-\[\] {
-    max-width: ;
-  }
-
-  .lg\:max-w-\[100\] {
-    max-width: 100;
-  }
-
-  .lg\:max-w-\[100px\] {
-    max-width: 100px;
-  }
-
-  .lg\:max-w-\[1000px\] {
-    max-width: 1000px;
   }
 
   .lg\:grid-cols-3 {
@@ -1155,11 +1088,6 @@ input[type="search"]::-webkit-search-cancel-button {
 
   .lg\:gap-6 {
     gap: 1.5rem;
-  }
-
-  .lg\:px-0 {
-    padding-left: 0px;
-    padding-right: 0px;
   }
 
   .lg\:pt-\[4\.3rem\] {
