repair page update

--- a/public/output.css
+++ b/public/output.css
@@ -843,6 +843,10 @@ video {
   border-radius: 0.5rem;
 }
 
+.rounded-\[3rem\] {
+  border-radius: 3rem;
+}
+
 .rounded-e-lg {
   border-start-end-radius: 0.5rem;
   border-end-end-radius: 0.5rem;
