--- a/public/output.css
+++ b/public/output.css
@@ -696,6 +696,14 @@ video {
   height: 100rem;
 }
 
+.h-\[100\%\] {
+  height: 100%;
+}
+
+.h-svh {
+  height: 100svh;
+}
+
 .w-10 {
   width: 2.5rem;
 }
