--- a/public/output.css
+++ b/public/output.css
@@ -667,20 +667,8 @@ video {
   height: 100svh;
 }
 
-.h-3 {
-  height: 0.75rem;
-}
-
-.h-\[\] {
-  height: ;
-}
-
-.h-\[300px\] {
-  height: 300px;
-}
-
-.h-\[0px\] {
-  height: 0px;
+.max-h-\[300px\] {
+  max-height: 300px;
 }
 
 .w-10 {
@@ -695,6 +683,10 @@ video {
   width: 100px;
 }
 
+.w-\[250px\] {
+  width: 250px;
+}
+
 .w-\[400px\] {
   width: 400px;
 }
@@ -707,26 +699,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-3 {
-  width: 0.75rem;
-}
-
-.w-\[\] {
-  width: ;
-}
-
-.w-\[300px\] {
-  width: 300px;
-}
-
-.w-\[0px\] {
-  width: 0px;
-}
-
-.w-\[250px\] {
-  width: 250px;
 }
 
 .max-w-\[1200px\] {
@@ -747,14 +719,6 @@ video {
 
 .max-w-\[730px\] {
   max-width: 730px;
-}
-
-.max-w-\[\] {
-  max-width: ;
-}
-
-.max-w-\[1200p\] {
-  max-width: 1200p;
 }
 
 .flex-auto {
@@ -1143,6 +1107,10 @@ video {
   padding-top: 5rem;
 }
 
+.pt-28 {
+  padding-top: 7rem;
+}
+
 .pt-3 {
   padding-top: 0.75rem;
 }
@@ -1169,14 +1137,6 @@ video {
 
 .pt-\[7\.3rem\] {
   padding-top: 7.3rem;
-}
-
-.pt-24 {
-  padding-top: 6rem;
-}
-
-.pt-28 {
-  padding-top: 7rem;
 }
 
 .text-center {
@@ -1347,6 +1307,27 @@ input[type="search"]::-webkit-search-cancel-button {
   cursor: pointer;
 }
 
+.custom-scrollbar::-webkit-scrollbar {
+  width: 5px;
+  /* Width of the scrollbar */
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color:#374151;
+  /* Color of the scrollbar thumb */
+  border-radius: 10px;
+  /* Rounded corners */
+  border: 3px solid transparent;
+  /* Add a border to create spacing */
+  background-clip: content-box;
+  /* Clip the background to create the effect */
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background-color: transparent;
+  /* Color of the track */
+}
+
 @media screen and (min-width:640px) {
   .item{
     display: grid;
@@ -1432,18 +1413,6 @@ input[type="search"]::-webkit-search-cancel-button {
 
   .md\:top-\[12\%\] {
     top: 12%;
-  }
-
-  .md\:top-\[5\%\] {
-    top: 5%;
-  }
-
-  .md\:top-\[\] {
-    top: ;
-  }
-
-  .md\:top-\[1\] {
-    top: 1;
   }
 
   .md\:order-1 {
@@ -1582,10 +1551,6 @@ input[type="search"]::-webkit-search-cancel-button {
 }
 
 @media (min-width: 1024px) {
-  .lg\:top-\[5\%\] {
-    top: 5%;
-  }
-
   .lg\:flex {
     display: flex;
   }
