--- a/public/output.css
+++ b/public/output.css
@@ -606,6 +606,10 @@ video {
   bottom: 0px;
 }
 
+.bottom-10 {
+  bottom: 2.5rem;
+}
+
 .bottom-\[-6rem\] {
   bottom: -6rem;
 }
@@ -682,10 +686,6 @@ video {
   top: 20rem;
 }
 
-.bottom-10 {
-  bottom: 2.5rem;
-}
-
 .z-10 {
   z-index: 10;
 }
@@ -758,6 +758,10 @@ video {
   height: 2.5rem;
 }
 
+.h-28 {
+  height: 7rem;
+}
+
 .h-8 {
   height: 2rem;
 }
@@ -782,10 +786,6 @@ video {
   height: 35rem;
 }
 
-.h-\[90vh\] {
-  height: 90vh;
-}
-
 .h-fit {
   height: -webkit-fit-content;
   height: -moz-fit-content;
@@ -808,14 +808,6 @@ video {
   height: 100svh;
 }
 
-.h-60 {
-  height: 15rem;
-}
-
-.h-28 {
-  height: 7rem;
-}
-
 .max-h-\[300px\] {
   max-height: 300px;
 }
@@ -834,6 +826,10 @@ video {
 
 .w-16 {
   width: 4rem;
+}
+
+.w-28 {
+  width: 7rem;
 }
 
 .w-\[100px\] {
@@ -860,14 +856,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-60 {
-  width: 15rem;
-}
-
-.w-28 {
-  width: 7rem;
 }
 
 .max-w-\[1200px\] {
@@ -1173,6 +1161,11 @@ video {
 .bg-gray-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(156 163 175 / var(--tw-bg-opacity));
+}
+
+.bg-gray-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
 
 .bg-gray-500 {
@@ -1512,14 +1505,14 @@ video {
   color: rgb(209 213 219 / var(--tw-text-opacity));
 }
 
-.text-gray-400 {
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
-}
-
 .text-gray-500 {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
+.text-gray-600 {
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 
 .text-gray-700 {
@@ -1693,9 +1686,9 @@ input[type="search"]::-webkit-search-cancel-button {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
-.placeholder\:text-gray-200::placeholder {
+.placeholder\:text-gray-700::placeholder {
   --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity));
+  color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 
 .placeholder\:text-white::placeholder {
